source_file = [
   'tvgArray.h',
   'tvgCompressor.h',
   'tvgFont.h',
   'tvgInlist.h',
   'tvgLock.h',
   'tvgMath.h',
   'tvgStr.h',
   'tvgCompressor.cpp',
   'tvgMath.cpp',
   'tvgStr.cpp'
]

utils_dep = declare_dependency(
    include_directories : include_directories('.'),
    sources : source_file)
