source_file = [
   'tvgArray.h',
   'tvgColor.h',
   'tvgCompressor.h',
   'tvgInlist.h',
   'tvgLock.h',
   'tvgMath.h',
   'tvgStr.h',
   'tvgColor.cpp',
   'tvgCompressor.cpp',
   'tvgMath.cpp',
   'tvgStr.cpp'
]

utils_dep = declare_dependency(
    include_directories : include_directories('.'),
    sources : source_file)
