examples_dep = dependency('elementary', required : true)

source_file = [
    'AnimateMasking.cpp',
    'Arc.cpp',
    'Async.cpp',
    'Blending.cpp',
    'Boundary.cpp',
    'ClipPath.cpp',
    'CustomTransform.cpp',
    'DirectUpdate.cpp',
    'Duplicate.cpp',
    'FillRule.cpp',
    'GradientMasking.cpp',
    'GradientStroke.cpp',
    'GradientTransform.cpp',
    'InvMasking.cpp',
    'LinearGradient.cpp',
    'Lottie.cpp',
    'Masking.cpp',
    'MultiCanvas.cpp',
    'MultiShapes.cpp',
    'Opacity.cpp',
    'PathCopy.cpp',
    'Path.cpp',
    'Performance.cpp',
    'PictureJpg.cpp',
    'PicturePng.cpp',
    'PictureRaw.cpp',
    'PictureTvg.cpp',
    'RadialGradient.cpp',
    'Scene.cpp',
    'SceneTransform.cpp',
    'Shape.cpp',
    'Stacking.cpp',
    'Stress.cpp',
    'Stroke.cpp',
    'StrokeLine.cpp',
    'Svg.cpp',
    'Svg2.cpp',
    'Transform.cpp',
    'Tvg.cpp',
    'TvgSaver.cpp',
    'Update.cpp',
]

foreach current_file : source_file
    name = current_file.split('.')[0]
    executable(name, current_file,
        include_directories : headers,
        link_with : thorvg_lib,
        dependencies : examples_dep)
endforeach


if get_option('bindings').contains('capi') == true
    capi_source_file = [
        'Capi.cpp'
    ]

    foreach current_file : capi_source_file
        name = current_file.split('.')[0]
        executable(name, current_file,
            include_directories : headers,
            link_with : thorvg_lib,
            dependencies : examples_dep)
    endforeach
endif
