source_file = [
   'tvgSwCommon.h',
   'tvgSwRasterC.h',
   'tvgSwRasterAvx.h',
   'tvgSwRasterNeon.h',
   'tvgSwFill.cpp',
   'tvgSwImage.cpp',
   'tvgSwMath.cpp',
   'tvgSwRenderer.h',
   'tvgSwRasterVector.cpp',
   'tvgSwRasterImage.cpp',
   'tvgSwRenderer.cpp',
   'tvgSwMemPool.cpp',
   'tvgSwRle.cpp',
   'tvgSwShape.cpp',
   'tvgSwStroke.cpp',
]

engine_dep += [declare_dependency(
    include_directories : include_directories('.'),
    sources : source_file
)]
