if lottie_expressions
    subdir('jerryscript')
endif

source_file = [
   'tvgLottieBuilder.h',
   'tvgLottieExpressions.h',
   'tvgLottieInterpolator.h',
   'tvgLottieLoader.h',
   'tvgLottieModel.h',
   'tvgLottieParser.h',
   'tvgLottieParserHandler.h',
   'tvgLottieProperty.h',
   'tvgLottieAnimation.cpp',
   'tvgLottieBuilder.cpp',
   'tvgLottieExpressions.cpp',
   'tvgLottieInterpolator.cpp',
   'tvgLottieLoader.cpp',
   'tvgLottieModel.cpp',
   'tvgLottieParserHandler.cpp',
   'tvgLottieParser.cpp'
]

subloader_dep += [declare_dependency(
    include_directories : include_directories('.'),
    sources : source_file
)]

install_headers('thorvg_lottie.h')
headers += include_directories('.')
