source_file = [
   'tvgSvgLoader.h',
   'tvgSvgLoaderCommon.h',
   'tvgSvgPath.h',
   'tvgSvgSceneBuilder.h',
   'tvgSvgUtil.h',
   'tvgXmlParser.h',
   'tvgSvgLoader.cpp',
   'tvgSvgPath.cpp',
   'tvgSvgSceneBuilder.cpp',
   'tvgSvgUtil.cpp',
   'tvgXmlParser.cpp'
]

subloader_dep += [declare_dependency(
    include_directories : include_directories('.'),
    sources : source_file
)]
