source_file = [
   'tvgSvgBuilder.h',
   'tvgSvgCommon.h',
   'tvgSvgCssStyle.h',
   'tvgSvgLoader.h',
   'tvgSvgPath.h',
   'tvgSvgUtil.h',
   'tvgXmlParser.h',
   'tvgSvgBuilder.cpp',
   'tvgSvgCssStyle.cpp',
   'tvgSvgLoader.cpp',
   'tvgSvgPath.cpp',
   'tvgSvgUtil.cpp',
   'tvgXmlParser.cpp'
]

subloader_dep += [declare_dependency(
    include_directories : include_directories('.'),
    sources : source_file
)]
