source_file = [
   'tvgSimpleXmlParser.h',
   'tvgSvgLoader.h',
   'tvgSvgLoaderCommon.h',
   'tvgSvgPath.h',
   'tvgSvgSceneBuilder.h',
   'tvgSimpleXmlParser.cpp',
   'tvgSvgLoader.cpp',
   'tvgSvgPath.cpp',
   'tvgSvgSceneBuilder.cpp',
]

svgloader_dep = declare_dependency(
   include_directories : include_directories('.'),
   sources : source_file
)
