source_file = [
   'tvgSimpleXmlParser.h',
   'tvgSvgLoader.h',
   'tvgSvgLoaderCommon.h',
   'tvgSvgSceneBuilder.h',
   'tvgSimpleXmlParser.cpp',
   'tvgSvgLoader.cpp',
   'tvgSvgSceneBuilder.cpp',
]

svgloader_dep = declare_dependency(
   include_directories : include_directories('.'),
   sources : source_file
)
